--- a/css/main.css
+++ b/css/main.css
@@ -1369,6 +1369,10 @@ textarea.form-control, textarea.form-control:focus {
   width: 5%;
 }
 
+.skills-second-style .skill-container.skill-12 .skill-percentage {
+  width: 15%;
+}
+
 /* --- End of Skills Values --- */
 
 /* Animate skills on subpage load */
@@ -1562,7 +1566,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .portfolio-grid figure:hover img {
-  transform: scale(1.1);
+  /*transform: scale(1.1);*/
 }
 
 .portfolio-grid figure a {
